# pfs_instdata

./: .gitignore  README.md  SConstruct  pyproject.toml  test.txt
config/JHU/: nirCleanroom.yaml
config/actors/: actors.yaml  ag.yaml  agcc.yaml  alerts.yaml  ccd.yaml  dcb.yaml  drp.yaml  enu.yaml  fps.yaml  gen2.yaml  ginga.yaml  hx.yaml  iic.yaml  iis.yaml  mcs.yaml  mlp.yaml  oneCmd.yaml  peb.yaml  pfilamps.yaml  pfsgui.yaml  pfsplot.yaml  rough.yaml  sequencepanel.yaml  sps.yaml  tests.yaml  vgw.yaml  vlan.yaml  xcu.yaml
config/alerts/: AIT@LAM.yaml  STS.yaml  cryoMode.yaml  keywordAlerts.yaml  obsWarnings.yaml
config/pipelines/: hilo.yaml  summit.yaml
data/: fiberBlocked.csv  mcs.yaml  mcsDefaultCentroidParameters.yaml
data/actors/: dcb.yaml  enu_sm1.yaml  sps.yaml
data/agc/psfTemplates/: dZ+0.00_SS0.60.fits  dZ+0.00_SS0.70.fits  dZ+0.00_SS0.90.fits  dZ+0.00_SS1.00.fits  dZ+0.02_SS0.60.fits  dZ+0.02_SS0.70.fits  dZ+0.02_SS0.80.fits  dZ+0.02_SS0.90.fits  dZ+0.02_SS1.00.fits  dZ+0.04_SS0.60.fits  dZ+0.04_SS0.70.fits  dZ+0.04_SS0.80.fits  dZ+0.04_SS0.90.fits  dZ+0.04_SS1.00.fits  dZ+0.06_SS0.60.fits  dZ+0.06_SS0.70.fits  dZ+0.06_SS0.80.fits  dZ+0.06_SS0.90.fits  dZ+0.06_SS1.00.fits  dZ+0.08_SS0.60.fits  dZ+0.08_SS0.70.fits  dZ+0.08_SS0.80.fits  dZ+0.08_SS0.90.fits  dZ+0.08_SS1.00.fits  dZ+0.10_SS0.60.fits  dZ+0.10_SS0.70.fits  dZ+0.10_SS0.80.fits  dZ+0.10_SS0.90.fits  dZ+0.10_SS1.00.fits  dZ+0.12_SS0.60.fits  dZ+0.12_SS0.70.fits  dZ+0.12_SS0.80.fits  dZ+0.12_SS0.90.fits  dZ+0.12_SS1.00.fits  dZ+0.14_SS0.60.fits  dZ+0.14_SS0.70.fits  dZ+0.14_SS0.80.fits  dZ+0.14_SS0.90.fits  dZ+0.14_SS1.00.fits  dZ+0.16_SS0.60.fits  (+255 more)
data/fibers/: badPsf.yaml  blocked.csv
data/mcs/: boresight.yaml  mcsDefaultCentroidParameters.yaml
data/pfi/: PFI.yaml  PFI_ALL.yaml  fiducial_positions.csv  fiducial_positions_20220916.csv
data/pfi/dot/: black_dots-2022-06-16_01.csv  black_dots-2022-06-19_01.csv  black_dots_2022-06-17_76685.csv  black_dots_mm-2021-11-14.csv  black_dots_mm-2022-09-21.csv  black_dots_mm-2022-09-23.csv  black_dots_mm-2022-11-19-el30.csv  black_dots_mm-2022-11-19-el60.csv  black_dots_mm-2022_05_18.csv  black_dots_mm-2023-05-03.csv  black_dots_mm-2024-10-28.csv  black_dots_mm-2024-11-05.csv  black_dots_mm.csv  black_spot_mm.csv  dot_design_asrd_20210422.txt  dot_measurements_20210428_el30_rot+00_ave.csv  dot_measurements_20210428_el30_rot+60_ave.csv  dot_measurements_20210428_el30_rot-60_ave.csv  dot_measurements_20210428_el60_rot+00_ave.csv  dot_measurements_20210428_el60_rot+60_ave.csv  dot_measurements_20210428_el60_rot-60_ave.csv  dot_measurements_20210428_el90_rot+00_ave.csv  dot_measurements_20210428_el90_rot+60_ave.csv  dot_measurements_20210428_el90_rot-60_ave.csv  dot_subaru_20210710_el90_rot+00_ave.csv  (+3 more)
(+295 files in other folders)
